--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,6 @@ github:
   repository_url: https://github.com/OmegaGraf/OmegaGraf
   zip_url: https://github.com/OmegaGraf/OmegaGraf/releases/download/v1.0.0/OmegaGraf-win-x64-v1.0.0.zip
   tar_url: https://github.com/OmegaGraf/OmegaGraf/releases/download/v1.0.0/OmegaGraf-linux-x64-v1.0.0.tar.gz
+github_pages:
+  url: https://omegagraf.github.io
+  name: omegagraf.github.io
